# stduuid

./: .gitignore  .travis.yml  CMakeLists.txt  P0959.md  README.md  appveyor.yml  how_to_build.md  paper.md
cmake/: Config.cmake.in
include/: uuid.cpp  uuid.h
src/: uuid.cpp  uuid.h
test/: .gitignore  CMakeLists.txt  test.cpp  test_generators.cpp  test_uuid.cpp
test/test_win/: .gitignore  stdafx.cpp  test_win.cpp  test_win.sln  test_win.vcxproj  test_win.vcxproj.filters
